show location layout bug fix

--- a/app/assets/stylesheets/location.scss
+++ b/app/assets/stylesheets/location.scss
@@ -369,8 +369,8 @@ table#show_all_table {
 }
 
 table#show_table {
-  margin-left: -50px;
-  margin-top: 20px;
+  margin-left: -48px;
+  margin-top: -24px;
   font-size: 16px;
   text-align: left;
   width: 500px;
